<resources>
    <string name="app_name">My Application</string>
    <string name="hangman">Hangman</string>
    <string name="username">UserName</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="click_here">Click here</string>
    <string name="touch_new_game_and_select_category">Touch New Game and select category</string>
    <string name="word">Word</string>
    <string name="input_a_letter">Input a Letter</string>
    <string name="letters_tried">Letters Tried:</string>
    <string name="new_game">New Game</string>
    <string name="main_menu">Main Menu</string>
</resources>